# ecl-template

./: .gitignore  CMakeLists.txt  build.gradle  readme.md
cmake_modules/: FindECL.cmake
src/ecltemplate/cpp/: bob.cpp  bob.h  draw.cpp  engine.cpp  engine.h  input.cpp  main.cpp  ui.cpp  ui.h  update.cpp
src/ecltemplate/lisp/: main.lisp
